tests/fixtures/dimensions/change_blast_radius/bad/u6.ts
import { core } from "./core";
export const u6 = core + 6;
